--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
+    "react-bootstrap": "^2.8.0",
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
